fix: 恢复使用 PerfectScrollbar

--- a/packages/extension-manager/src/browser/extension-detail.module.less
+++ b/packages/extension-manager/src/browser/extension-detail.module.less
@@ -32,6 +32,10 @@
   }
 }
 
+.body :global(.ant-tabs-ink-bar) {
+  background-color: var(--button-background);
+}
+
 .content {
   // 43 为 tab 的高度
   height: calc(100% - 43px);
